# my_message_decorator

./: README.md  pyproject.toml
src/my_message_decorator/: __init__.py  message_formatter.py
