[project]
name = "my-message-decorator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Asad Waheed", email = "mrasadwaheed@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
my-message-decorator = "my_message_decorator:main"
decorator_example = "my_message_decorator.message_formatter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
